Add printing support to the new browser
This uses private WebKit APIs on systems before macOS 11.

The printPage method of the Tab protocol is replaced by printDocument(sender)
for consistency.

When the new browser is used, the "Page Setup…" menu item in the File menu
is redundant, because the same options are available in the print panel.
Page setup is typically used by NSDocument-based apps, which Vienna is not.

--- a/Vienna/Interfaces/Base.lproj/MainMenu.xib
+++ b/Vienna/Interfaces/Base.lproj/MainMenu.xib
@@ -207,6 +207,7 @@ CA
                             <menuItem title="Page Setup…" keyEquivalent="P" id="77">
                                 <connections>
                                     <action selector="runPageLayout:" target="-1" id="87"/>
+                                    <binding destination="EBo-gz-68t" name="hidden" keyPath="values.UseNewBrowser" id="Dki-E4-XNg"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Print…" keyEquivalent="p" id="78">
